

History
=======

Version: 1.3.1 - Date: XXXX-XX-XX
---------------------------------

ENHANCEMENTS

 * #262: FTPS is now able to load a certificate chain file.  (patch by
         briantomko)
 * #277: added a make file for running tests and for other repetitive tasks
         (also for Windows).
 * #281: tarballs are now hosted on PYPI.

BUG FIXES

 * #261: (FTPS) SSL shutdown does not properly work on Windows.
 * #280: (Python 2) unable to complete directory listing with invalid UTF8
         characters. (patch by dn@devicenull.org)
 * #283: always use a single 'pyftpdlib' logger.


Version: 1.3.0 - Date: 2013-11-07
---------------------------------

ENHANCEMENTS

 * #253: benchmark script's new --timeout option.
 * #270: new -V / --verbose cmdline option to enable a more verbose logging.

BUG FIXES

 * #254: bench.py script hadn't been ported to Python 3.
 * #263: MultiprocessFTPServer leaks memory and file descriptors.  (patch by
         Juan J. Martinez)
 * #265: FTPServer class cannot be used with Circus.
 * #272: pyftpdlib fails when imported on OpenBSD because of Python bug
         http://bugs.python.org/issue3770
 * #273: IOLoop.fileno() on BSD systems raises AttributeError.  (patch by
         Michael Ross)


Version: 1.2.0 - Date: 2013-04-22
---------------------------------

ENHANCEMENTS

 * #250: added FTPServer's backlog argument controlling the queue of accepted
        connections.
 * #251: IOLoop.fileno() method for epoll() and kqueue() pollers.
 * #252: FTPServer 'address' parameter can also be an existent socket object.

BUG FIXES

 * #245: ThreadedFTPServer hogs all CPU resources after a client connects.


Version: 1.1.0 - Date: 2013-04-09
---------------------------------

ENHANCEMENTS

 * #240: enabled "python -m pyftpdlib" cmdline syntax and got rid of
         "python -m pyftpdlib.ftpserver" syntax which was deprecated in 1.0.0.
 * #241: empty passwords are now allowed for anonymous and other users.